Added both binomial projects to the site and fiddled with the css a bit.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,46 @@
         <h1 class = "col-xs-12"><a name="projects">Projects</a>
         </h1>
 
+        <!-- Confidence Intervals viz -->
+        <div class="row ">
+            <div class="col-xs-12 col-sm-6 text-center">
+                <a href="http://nickstrayer.me/binomialFun/confidenceIntervals" target="_blank">
+                    <img class="projectPic" src="images/projectPics/confidenceIntervals.png" alt="Confidence Intervals" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/binomialFun/confidenceIntervals" target="_blank"> What are Confidence Intervals?</strong> </a>
+                        <li>Allows the user to explore what a frequentist confidence interval truly is.</li>
+                        <li>To many people, including the scientists who use them, the behavior of Confidence Intervals is confusing.</li>
+                        <li>All statistics functions are written from base javascript. See <a href = "https://github.com/nstrayer/binomialFun">github</a> for details. </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Binomial viz -->
+        <div class="row project">
+            <div class="col-xs-12 col-sm-6 text-center">
+                <a href="http://nickstrayer.me/binomialFun/" target="_blank">
+                    <img class="projectPic" src="images/projectPics/binomial.png" alt="Binomial Draws" width="">
+                </a>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+                <ul>
+                    <strong class="projectTitle"><a href="http://nickstrayer.me/binomialFun/" target="_blank">Binomially Distributed Fun!</strong> </a>
+                        <li>Demonstrates how a sequence of independent Bernouli Trials make up the Binomial Distribution.</li>
+                        <li>Allows the user to toggle the parameters of the Bernouli and generate a samples.</li>
+                        <li>Calculates and displays a 95% confidence interval and wilson hypothesis test based upon the generated data.</li>
+                        <li>All statistics funtions are written from scratch in vanilla javascript.</li>
+                        <li><a href = "https://github.com/nstrayer/binomialFun">github.</a></li>
+                </ul>
+            </div>
+        </div>
+
         <!-- Integral transform viz -->
-        <div class="row">
+        <div class="row project">
             <div class="col-xs-12 col-sm-6 text-center">
                 <a href="http://nickstrayer.me/distributionTransforms/" target="_blank">
                     <img class="projectPic" src="images/projectPics/integralTransform.png" alt="Integral Transform" width="">
