I Mispelled bernoulli because I am a dingus

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="col-xs-12 col-sm-6">
                 <ul>
                     <strong class="projectTitle"><a href="http://nickstrayer.me/binomialFun/" target="_blank">Binomially Distributed Fun!</strong> </a>
-                        <li>Demonstrates how a sequence of independent Bernouli Trials make up the Binomial Distribution.</li>
-                        <li>Allows the user to toggle the parameters of the Bernouli and generate a samples.</li>
+                        <li>Demonstrates how a sequence of independent Bernoulli Trials make up the Binomial Distribution.</li>
+                        <li>Allows the user to toggle the parameters of the Bernoulli and generate a samples.</li>
                         <li>Calculates and displays a 95% confidence interval and wilson hypothesis test based upon the generated data.</li>
                         <li>All statistics funtions are written from scratch in vanilla javascript.</li>
                         <li><a href = "https://github.com/nstrayer/binomialFun">github.</a></li>
