Changed modeling to simulation for making data in about me

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <strong>statistics</strong> and minored in
                 <strong>computer science.</strong>
             </p>
-            <p>I like data. Manipulating it, making it (modeling), visualizing it and yes, even cleaning it. I do these things with
+            <p>I like data. Manipulating it, making it (simulation), visualizing it and yes, even cleaning it. I do these things with
             some combination of R, Python and Javascript (d3.js in particular).</p>
             <p>My current research interests include:
                 <strong>statistical genetics</strong>,
