Forgot to change the CV in my nav bar. Oops

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li><a href="#projects">Projects</a>
                     </li>
-                    <li><a href="#resume">Resume</a>
+                    <li><a href="#resume">C.V.</a>
                     </li>
                     <li><a href="#contact">Contact</a>
                     </li>
