New way of entering projects in, just transfering projects now.

--- a/index.html
+++ b/index.html
@@ -92,277 +92,7 @@
 
     <div id="projectsDiv" class="section">
 
-        <h1 class = "col-xs-12"><a name="projects">Projects</a>
-        </h1>
 
-        <!-- Confidence Intervals viz -->
-        <div class="row ">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/binomialFun/confidenceIntervals" target="_blank">
-                    <img class="projectPic" src="images/projectPics/confidenceIntervals.png" alt="Confidence Intervals" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/binomialFun/confidenceIntervals" target="_blank"> What are Confidence Intervals?</strong> </a>
-                        <li>Allows the user to explore what a frequentist confidence interval truly is.</li>
-                        <li>To many people, including the scientists who use them, the behavior of Confidence Intervals is confusing.</li>
-                        <li>All statistics functions are written from base javascript. See <a href = "https://github.com/nstrayer/binomialFun">github</a> for details. </li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- Binomial viz -->
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/binomialFun/" target="_blank">
-                    <img class="projectPic" src="images/projectPics/binomial.png" alt="Binomial Draws" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/binomialFun/" target="_blank">Binomially Distributed Fun!</strong> </a>
-                        <li>Demonstrates how a sequence of independent Bernoulli Trials make up the Binomial Distribution.</li>
-                        <li>Allows the user to toggle the parameters of the Bernoulli and generate a samples.</li>
-                        <li>Calculates and displays a 95% confidence interval and wilson hypothesis test based upon the generated data.</li>
-                        <li>All statistics funtions are written from scratch in vanilla javascript.</li>
-                        <li><a href = "https://github.com/nstrayer/binomialFun">github.</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- Integral transform viz -->
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/distributionTransforms/" target="_blank">
-                    <img class="projectPic" src="images/projectPics/integralTransform.png" alt="Integral Transform" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/distributionTransforms/" target="_blank"> Visualizing Probability Distribution Transformations.</strong> </a>
-                        <li>Made in an effort to visualize what happens when you transform a probability distribution with a function.</li>
-                        <li>Uses the normal distribution transformed by the normal cdf, resulting in a uniform distribution. See <a href = "https://en.wikipedia.org/wiki/Probability_integral_transform"> here</a> for more info. </li>
-                        <li>Inspired by my course work in Probability at Vanderbilt.</li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- wildfires viz -->
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/wildfires/" target="_blank">
-                    <img class="projectPic" src="images/projectPics/wildfires.png" alt="Wildfires" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/wildfires/" target="_blank"> Where Are Wildfires Burning?</strong> </a>
-                        <li>Uses open data from NASA satelites on global temperature anomalies.</li>
-                        <li>Fresh data is downloaded every day and pushed to the static page via shell scripts avoiding the need for servers.</li>
-                        <li><a href="https://github.com/nstrayer/wildfires" target="_blank"> Github Repo</a>.</li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- wildfires viz -->
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/D3ManhattanPlots/" target="_blank">
-                    <img class="projectPic" src="images/projectPics/d3Manhattan.png" alt="mannhattanplotin" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/D3ManhattanPlots/" target="_blank"> Interactive Manhattan Plot R Package.</strong> </a>
-                        <li>An R package to generate interactive and embedable manhattan plots for genome wide association studies.</li>
-                        <li>Binds R and Javascript + D3 using the <a href = "http://www.htmlwidgets.org/">HTMLWidgets</a> package.</li>
-                        <li><a href="https://github.com/nstrayer/D3ManhattanPlots" target="_blank"> Github Repo</a>.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/marketStory/" target="_blank">
-                    <img class="projectPic" src="images/marketStory.png" alt="Farmers Markets States" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/marketStory/" target="_blank"> State Farmers Market Profiles.</strong> </a>
-                        <li>Companion visualization to <a href="http://nickstrayer.me/farmersMarkets/" target="_blank"> What Do Farmer's Markets Sell?</a></li>
-                        <li>Explore different states path's through different metrics relating to farmers markets.</li>
-                        <li>Uses equal sized states map as menu to reduce bias associated with normal projections.</li>
-                        <li>Data courtesy of <a href="http://catalog.data.gov/dataset/farmers-markets-geographic-data" target="_blank"> Data.gov</a>.</li>
-                        <li><a href="https://github.com/nstrayer/farmersMarkets" target="_blank"> Github Repo</a>.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://nickstrayer.me/farmersMarkets/" target="_blank">
-                    <img class="projectPic" src="images/farmersMarkets.png" alt="Farmers Markets Viz" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://nickstrayer.me/farmersMarkets/" target="_blank"> What Do Farmer's Markets Sell?</strong> </a>
-                        <li>Select different good types (e.g. Vegetables, Fruit) and see which markets sell them.</li>
-                        <li>Assemble different combinations of goods to explore regional trends.</li>
-                        <li>Dynamic layout adjusts to mobile or desktop views.</li>
-                        <li>Be patient with it, more than eight thousand points are being drawn to the screen. It will bog down older phones/computers.</li>
-                        <li>Data courtesy of <a href="http://catalog.data.gov/dataset/farmers-markets-geographic-data" target="_blank"> Data.gov</a>.</li>
-                        <li><a href="https://github.com/nstrayer/farmersMarkets" target="_blank"> Github Repo</a>.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank">
-                    <img class="projectPic" src="images/projectPics/manhattanPlots.png" alt="Manhattan Plots Viewer" width="">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/manhattanPlots" target="_blank"> Interactive Manhattan Plot Viewer.</strong> </a>
-                        <li>Developed as an experiment in exploratory data visualization.</li>
-                        <li>Select different controls for comparison, e.g. non-dominant arm growth to see linked snps.</li>
-                        <li>A manhattan plot is a commonly used tool in accessing genetic roots for traits</li>
-                        <li>Uses data from the FAMuSS study (<a href="http://isites.harvard.edu/fs/docs/icb.topic1388631.files/thompson_FAMuSS.pdf" target="_blank"> Thompson Et Al. 2004</a>).</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/signLanguage" target="_blank">
-                    <img class="projectPic" src="images/projectPics/signLanguage.jpg" alt="Leap Motion Project">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/signLanguage" target="_blank"> Learn ASL numbers with Leap Motion. </a>
-                    </strong>
-                    <li>First place project at 2014 UVM CS Fair.</li>
-                    <li>Teaches numbers 0-9 in American Sign Language.</li>
-                    <li>Utilizes three.js and webGL for rendering.</li>
-                    <li>Built to exploit multiple HCI and Cognitive Psychology theories (e.g. object consistancy and the generation effect) in order to maximize learning experience.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/leapD3" target="_blank">
-                    <img class="projectPic" src="images/projectPics/leap.jpg" alt="Leap Motion Project">
-                </a>
-                <!-- <iframe width="300" height="200" src="//www.youtube.com/embed/yttEEA-Gd2A" frameborder="0" allowfullscreen></iframe> -->
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/leapD3" target="_blank"> Experimental Leap Motion + D3.js project. </a>
-                    </strong>
-                    <li>Wave your hands around and watch D3.js mirror you!</li>
-                    <li>In the future I plan on implementing ways to interact with D3 visualizations by recognizing gestures using machine learning algorithms.</li>
-                    <li><a href="https://www.youtube.com/watch?v=yttEEA-Gd2A">Video of it in action</a> for if you don't have a Leap.</li>
-                    <li>
-                        <strong>Note:</strong> When using, start by waving your hands around above the Leap Motion device and watch it calibrate!</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/histOfPolio" target="_blank">
-                    <img class="projectPic" src="images/projectPics/polioHist.jpg" alt="Polio History">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/histOfPolio" target="_blank"> Polio's impact on the United States. </a>
-                    </strong>
-                    <li>A project for <a href="http://bagrow project.com/ds2/" target="_blank"> Data Science 2 </a> (Math 295) taught by <a href="http://bagrow project.com">Professor James Bagrow project</a> at the University of Vermont. </li>
-                    <li><a href="http://nbviewer.ipython.org/github/nstrayer/math295/blob/master/HW01/work/hw01.ipynb" target="_blank"> iPython notebook </a>and data files available on my <a href="https://github.com/nstrayer/math295" target="_blank">github.</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/d3Tests/dataExplore.html" target="_blank">
-                    <img class="projectPic" src="images/projectPics/labInTheWild.jpg" alt="Lab In The Wild Project">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"> <a href="http://www.labinthewild.org/studies/visualization/" target="_blank"> labinthewild.org Interactive Visualization. </a>
-                    </strong>
-                    <li>A visualization developed for LabInTheWild at the University of Michigan to help participants place themselves among differing demographics.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/fillingStations" target="_blank">
-                    <img class="projectPic" src="images/projectPics/fillingStations.jpg" alt="Alt Fuel Filling Stations">
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"><a href="http://www.uvm.edu/~nstrayer/fillingStations" target="_blank"> Alternative energy filling stations in the U.S.. </a> </strong>
-                    <li>Using d3.hexbin I took took 18k+ data points and binned them to help explore geographic trends in alternative energy filling stations. </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/superHeroes" target="_blank">
-                    <img class="projectPic" src="images/projectPics/superHeroes.jpg" alt="super heroes at the movies">
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/superHeroes" target="_blank"> Marvel Vs. DC in the theater.</a>
-                    </strong>
-                    <li>I extracted data from The Verge article <a href="http://www.theverge.com/2014/8/22/6056617/marvels-movie-business-is-crushing-dcs-and-its-not-close" target="_blank"> "Marvel's movie business is crushing DC's and it's not close."</a>                        and threw together a visualization to better extract trends not visible in the original spreadsheet presentation format. </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row project">
-            <div class="col-xs-12 col-sm-6 text-center">
-                <a href="http://www.uvm.edu/~nstrayer/powerVis" target="_blank">
-                    <img class="projectPic" src="images/projectPics/CAPower.jpg" alt="california powerplants">
-                </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-6">
-                <ul>
-                    <strong class="projectTitle"> <a href="http://www.uvm.edu/~nstrayer/powerVis" target="_blank"> Where does California get its energy? </a>
-                    </strong>
-                    <li>A visualization that explores how electricity is generated in the state of California. Data was cleaned using python and then the visualization was generated using d3.js. </li>
-                </ul>
-            </div>
-
-        </div>
     </div>
 
 
@@ -740,7 +470,7 @@
             });
         }
     </script>
-    <script>
+    <!-- <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
@@ -755,7 +485,8 @@
 
         ga('create', 'UA-53965157-1', 'auto');
         ga('send', 'pageview');
-    </script>
+    </script> -->
+    <script src="js/projects_data.js"></script>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
