All the projects are in

--- a/index.html
+++ b/index.html
@@ -424,10 +424,6 @@
                     <img class="photos" src="images/lawQuad.jpg" alt="I am a super serious person">
                 </p>
             </div>
-            <!-- <div class = "col-xs-12, col-md-4" id = "twitter">
-                <a class="twitter-timeline" href="https://twitter.com/NicholasStrayer" data-widget-id="653247510123782146">Tweets by @NicholasStrayer</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </div> -->
         </div>
 
 </div>
@@ -470,7 +466,7 @@
             });
         }
     </script>
-    <!-- <script>
+    <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
@@ -485,7 +481,7 @@
 
         ga('create', 'UA-53965157-1', 'auto');
         ga('send', 'pageview');
-    </script> -->
+    </script>
     <script src="js/projects_data.js"></script>
     <script src="js/script.js"></script>
     <script src="js/bootstrap.min.js"></script>
