cv is now a pdf but still has the cool accordian functionality

--- a/index.html
+++ b/index.html
@@ -107,294 +107,8 @@
     </div>
 
     <div id="resumeDiv" class = "col-sm-12 col-md-10 col-md-offset-1">
-
-        <div id="resumeMenu">
-
-            <h3 class="resumeSections">Education:</h3>
-            <!-- Education SubDiv -->
-            <div>
-                <p>
-                    <strong>Vanderbilt University</strong>,
-                    <em>Nashville, TN</em>:</p>
-                <ul>
-                    <li>Pursuing a PhD. in <strong>biostatistics.</strong></li>
-                    <li>Started August 2015.</li>
-                    <li>University Graduate Fellow.</li>
-                </ul>
-
-                <p>
-                    <strong>University of Vermont</strong>,
-                    <em>Burlington, VT</em>:</p>
-                <ul>
-                    <li>B.S. in
-                        <strong>mathematics and statistics</strong> with a minor in
-                        <strong>computer science</strong>, Cum Laude, Honors College Scholar.</li>
-                    <li>May, 2015.</li>
-                    <li>GPA:
-                        <strong>3.82/4.0</strong>
-                    </li>
-                </ul>
-
-
-            </div>
-            <hr>
-
-            <h3 class="resumeSections">Talks and Publications:</h3>
-            <div>
-                <ul>
-                    <li>
-                        <strong>Asymmetric Linkage Disequilibrium: Tools for Dissecting Multiallelic LD</strong>, Journal of Human Immunology (paper).
-                        <ul>
-                            <li>Authored with Richard Single, Vanja Paunic, Mark Albrecht and Martin Maiers</li>
-                        </ul>
-                        <ul>
-                            <li>Accepted Sep, 2015</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>An Agent Based Model of Mysis Migration</strong>, International Association of Great Lakes Research Conference (talk).
-                        <ul>
-                            <li>Authored with Brian O'Malley, Sture Hansson and Jason Stockwell</li>
-                        </ul>
-                        <ul>
-                            <li>May 2015</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>D3.js and its Role in Data Science</strong>, Burlington Data Scientists Meetup (talk).
-                        <ul>
-                            <li>May 2015</li>
-                        </ul>
-                        <ul>
-                            <li><a href = "https://github.com/BTVDataScience/BTV_Data_Science_Talk/blob/master/dataMeetupTalk.pdf">Slides</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Declines of Mysis diluviana in the Great Lakes</strong>, Journal of Great Lakes Research (paper).
-                        <ul>
-                            <li>Authored with Peter Euclide and Jason Stockwell</li>
-                        </ul>
-                        <ul>
-                            <li>Pre-Print submitted March 2015</li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li>
-                        <strong>D3.js and its Role in Data Science</strong>, Burlington Data Scientists Meetup (talk).
-                        <ul>
-                            <li>May 2015</li>
-                        </ul>
-                        <ul>
-                            <li><a href = "https://github.com/BTVDataScience/BTV_Data_Science_Talk/blob/master/dataMeetupTalk.pdf">Slides</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul>
-                    <li>
-                        <strong>RMarkdown and Reproducable Research</strong>, Rubenstein Ecosystem Science Laboratory (talk).
-                        <ul>
-                            <li>February 2015</li>
-                        </ul>
-                        <ul>
-                            <li><a href = "http://rpubs.com/nstrayer/rmarkdownPres">RMarkdown document.</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
-            </div>
-            <hr>
-            <h3 class="resumeSections">Experience:</h3>
-
-            <!-- Experience -->
-            <div>
-                <ul>
-                    <li>
-                        <strong>Data Science Intern</strong>, Dealer.com,
-                        <em>Burlington, VT</em> [March 2015 to May 2015]:
-                        <ul>
-                            <li>Worked with the product analytics team to help parse and visualize large stores of data.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Engineering Intern - User Experience</strong>, Dealer.com,
-                        <em>Burlington, VT</em> [Jan 2015 to March 2015.]:
-                        <ul>
-                            <li>Worked to help analyze and visualize user interaction with backend products.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Software Engineering Intern</strong>, Conduce,
-                        <em>Carpinteria, CA</em> [Summer 2014]:
-                        <ul>
-                            <li>Self directed project to bring the latest JavaScript visualization technologies to the company's main software platform.</li>
-                            <li>Fully envisioned, prototyped and implemented new data visualization framework in the course of one month.</li>
-                            <li>Constructed training protocol for rapidly bringing third parties up to speed with new protocol.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Human Computer Interaction Researcher</strong>, LabInTheWild (University of Michigan) [Summer 2014]:
-                        <ul>
-                            <li>In charge of developing and implementing interactive data visualizations to help users compare themselves to other demographics.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Undergraduate Researcher</strong>, Rubenstein Lab [2013 to Pres.]:
-                        <ul>
-                            <li>Analyzed and visualized data for CATOS fish tracking project.</li>
-                            <li>Head of data mining project to establish temporal trends in population densities of
-                                <em>Mysis diluviana</em>.</li>
-                            <li>Running project to mathematically model the migration patterns of
-                                <em>Mysis diluviana</em> (honors thesis project.)</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Undergraduate Researcher</strong>, Bentil Laboratory [2013 to Pres.]:
-                        <ul>
-                            <li>Developing mathematical model to predict the transport of sulfur through the environment with applications in waste cleanup.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Research Assistant</strong>, Adair Laboratory [2012 to '13']:
-                        <ul>
-                            <li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon decomposition rates.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Mathematics, Statistics and Chemistry Tutor</strong>, University of Vermont [2013 to Pres.]:
-                        <ul>
-                            <li>Tutor students seeking assistance in introductory to intermediate classes.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Computer Technician Intern</strong>, Logic Supply,
-                        <em>Burlington, VT</em> [2012 to '13]:
-                        <ul>
-                            <li>Involved in all roles of assembly and stress testing of computer systems.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Baker</strong>, Zingerman's Bakehouse,
-                        <em>Ann Arbor, MI</em> [2009 to '12]:
-                        <ul>
-                            <li>Responsible for production of bread in all stages.</li>
-                            <li>Trained new employees.</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Founding Member and Treasurer</strong>, UVM Olympic Weightlifting Team:
-                        <ul>
-                            <li>Co-founded UVM's first weightlifting club sports team.</li>
-                            <li>Responsible for design and implementation of $20,000+ budget.</li>
-                        </ul>
-                    </li>
-                </ul>
-
-
-            </div>
-            <!-- Break of experience subdiv -->
-            <hr>
-            <h3 class="resumeSections">Technical Skills:</h3>
-            <!-- Technical Skills -->
-            <div>
-
-                <h4>Experienced with the following:</h4>
-
-                <ul>
-                    <li>
-                        <strong>Programming Languages</strong>:
-                        <ul>
-                            <li>Python </li>
-                            <li>JavaScript
-                                <ul>
-                                    <li>JQuery </li>
-                                    <li>Angular.js </li>
-                                    <li>D3.js </li>
-                                    <li>three.js</li>
-                                </ul>
-                            </li>
-                            <li>Matlab </li>
-                            <li>R </li>
-                                <ul>
-                                    <li>Shiny</li>
-                                    <li>RMarkdown</li>
-                                    <li>Ggplot2</li>
-                                </ul>
-                            <li>php </li>
-                            <li>Swift </li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Technical Writing</strong>:
-                        <ul>
-                            <li>HTML </li>
-                            <li>LateX </li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <strong>Software</strong>:
-                        <ul>
-                            <li>Microsoft Office Suite </li>
-                            <li>Adobe Creative Suite </li>
-                            <li>JMP </li>
-                        </ul>
-                    </li>
-                </ul>
-
-
-            </div>
-            <!-- closes the technical skills div -->
-            <hr>
-            <h3 class="resumeSections">Honors and Scholarships:</h3>
-            <!-- closes the Honors and Scholarships -->
-            <div>
-                <ul>
-                    <li>Vanderbilt University Graduate Fellow </li>
-                    <li>Mu Sigma Rho, Statistics Honors Society </li>
-                    <li>First place project (among 163 projects) in overall competition at the 2014 UVM Computer Science Fair.</li>
-                    <li>One of three UVM students nominated for Goldwater Scholarship national level competition</li>
-                    <li>Presidential Scholarship </li>
-                    <li>Honors College Dean's Scholarship </li>
-                    <li>URECA summer research scholarship </li>
-                    <li>UVM Office of Undergraduate Research Summer Mini Grant recipient </li>
-                    <li>and James Buxton Scholarship.</li>
-                </ul>
-            </div>
-            <!-- closes the honors and scholarships div -->
-
-        </div>
+        <iframe src="http://docs.google.com/gview?url=https://www.dropbox.com/s/pc9s9k7k5slt0l7/strayer_cv_may_20_2016.pdf?dl=1&embedded=true" style="width:100%; height:700px;" frameborder="0"></iframe>
+    </div>
         <!-- closes the menu div -->
     </div>
     <!-- closes the resume div -->
