Fixed a container div issue

--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
         <iframe src="http://docs.google.com/gview?url=https://www.dropbox.com/s/pc9s9k7k5slt0l7/strayer_cv_may_20_2016.pdf?dl=1&embedded=true" style="width:100%; height:700px;" frameborder="0"></iframe>
     </div>
         <!-- closes the menu div -->
-    </div>
-    <!-- closes the resume div -->
 
     <hr>
 
@@ -139,7 +137,8 @@
                 </p>
             </div>
         </div>
-
+    </div>
+    <!-- closes the container div -->
 </div>
 
     <script type="text/javascript">
