--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <meta charset="utf-8">
 
 <body>
@@ -45,7 +45,8 @@
     </nav>
 
     <div id="intro">
-        <a name="main"></a>
+        <div id = "introSvg"></div>
+        <div id = "randomWalkCanvas"></div>
     </div>
 
     <hr>
