forgot to put in random walk explainer

--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
                 <strong>data visualization</strong> and
                 <strong>scientific communication</strong>.</p>
             <p>When I am not in "school mode" I love to bike places, read science fiction and look at cool buildings.</p>
-            <p>The curve at the begining of this page is the beautiful <a href="https://en.wikipedia.org/wiki/Log-normal_distribution">log-normal distribution</a> with mu fixed at 0.5 and theta varying between .1 and .9.
-                <p>Have a fantastic day!</p>
+            <p>The crazy lines at the begining of this page is a random walk drawing its next direction from a simple uniform distribution of radians. It is running for 5000 steps and it's all calculated in your computer's (or phone's) browser.
+                To learn more about random walks see <a href="https://en.wikipedia.org/wiki/Random_walk">here.</a>
+            </p>
+
+            <p>Have a fantastic day!</p>
         </div>
         <!-- <div class = "col-xs-12, col-md-4" id = "twitter">
             <a class="twitter-timeline" href="https://twitter.com/NicholasStrayer" data-widget-id="653247510123782146">Tweets by @NicholasStrayer</a>
